<resources>
    <string name="app_name">MyFirstAppWeather</string>
    <string name="default_city">Moscow</string>
    <string name="default_coordinates">lt/ln: 55.755826, 37.617299900000035</string>
    <string name="temperature_label">temperature</string>
    <string name="feels_like_label">feels like</string>
    <string name="city_coordinates">lt/ln: %s, %s</string>
    <string name="default_feels_like">+10</string>
    <string name="default_temperature">+15</string>
    <string name="humidity_label">"humidity, %: "</string>
    <string name="default_humidity">30</string>
    <string name="pressure_label">pressure, mm:</string>
    <string name="default_pressure">759 mm</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="condition_default">Облачно</string>
    <string name="dialog_message_default">Error</string>
    <string name="OK">OK</string>
    <string name="default_title_dialog">Message</string>
    <string name="activity_cannot_be_null">Activity cannot be null</string>
    <string name="menu_title_history">History</string>
    <string name="content_provider">Content Provider</string>
    <string name="dialog_rationale_title">Доступ к геолокации</string>
    <string name="dialog_rationale_message">Объяснение</string>
    <string name="dialog_rationale_give_access">Предоставить доступ</string>
    <string name="dialog_rationale_decline">Не надо</string>
    <string name="dialog_title_no_gps">Доступ к геолокации закрыт</string>
    <string name="dialog_message_no_gps">Разрешите доступ к геолокации, если хотите узнать погоду текущего места</string>
    <string name="dialog_button_close">Закрыть</string>
    <string name="dialog_address_title">Ваш адрес</string>
    <string name="dialog_address_get_weather">Узнать погоду</string>
    <string name="dialog_title_gps_turned_off">GPS отключен</string>
    <string name="dialog_message_last_location_unknown">Местоположение неизвестно. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="dialog_message_last_known_location">Показана последняя известная локация. Включите GPS, если хотите получить погоду по текущему адресу</string>
    <string name="google_maps">Google maps</string>
    <string name="marker_in_moscow">Marker in Moscow</string>
    <string name="default_address">Red Square, 1, Moscow</string>
    <string name="button_search_map">Search</string>
    <string name="marker_start">Start</string>
    <string name="AccessToContacts">Доступ к контактам</string>
    <string name="ReasonForAccessToContacts">Чтобы отобразить контакты, приложению требуется доступ к вашим контактам.</string>
    <string name="ButtonGrantAccess">Предоставить доступ</string>
    <string name="ButtonNoGrantAccess">Не надо</string>
    <string name="EmptyScreen">Экран останется пустым, так как разрешение на доступ к контактам не предоставлено.</string>
    <string name="ButtonClose">Закрыть</string>
</resources>